--- a/src/components/Button/index.module.css
+++ b/src/components/Button/index.module.css
@@ -9,5 +9,4 @@
   border-radius: 9999px;
   font-weight: 700;
   font-size: 1em;
-}
-/*# sourceMappingURL=index.module.css.map */
+}/*# sourceMappingURL=index.module.css.map */
