--- a/src/components/Reason/index.module.scss
+++ b/src/components/Reason/index.module.scss
@@ -1,1 +1,9 @@
-
+.container{
+    padding: 60px 50px;
+    font-size: 16px;
+    background-color: #FBFDFD;
+    .heading{
+        font-weight: 700;
+        font-size: 2em;
+    }
+}
