--- a/src/components/Reason/index.module.scss
+++ b/src/components/Reason/index.module.scss
@@ -2,8 +2,16 @@
     padding: 60px 50px;
     font-size: 16px;
     background-color: #FBFDFD;
+    position: relative;
     .heading{
         font-weight: 700;
         font-size: 2em;
+    }
+    .watermark{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 250px;
+        height: 250px;
     }
 }
