--- a/src/components/ReasonCard/index.module.css
+++ b/src/components/ReasonCard/index.module.css
@@ -1,1 +1,5 @@
-/*# sourceMappingURL=index.module.css.map */
+.container {
+  background-color: #FBFDFD;
+  -webkit-box-decoration-break: clone;
+          box-decoration-break: clone;
+}/*# sourceMappingURL=index.module.css.map */
