--- a/src/components/Reason/index.module.scss
+++ b/src/components/Reason/index.module.scss
@@ -6,7 +6,7 @@
     color: #4D4D4D;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 30px;
     .details{
             display: flex;
             flex-direction: column;
@@ -23,6 +23,7 @@
         left: 0;
         width: 250px;
         height: 250px;
+        z-index: 0;
     }
     .cards{
         display: flex;
