--- a/src/components/Reason/index.module.css
+++ b/src/components/Reason/index.module.css
@@ -6,7 +6,7 @@
   color: #4D4D4D;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 30px;
 }
 .container .details {
   display: flex;
@@ -24,6 +24,7 @@
   left: 0;
   width: 250px;
   height: 250px;
+  z-index: 0;
 }
 .container .cards {
   display: flex;
