--- a/src/components/ReasonCard/index.module.scss
+++ b/src/components/ReasonCard/index.module.scss
@@ -1,4 +1,31 @@
 .container{
     background-color: #FBFDFD;
-    box-decoration-break: clone;
+    box-shadow: 1px 3px 14px 2px rgba(209, 211, 211, 0.35);
+    transition: box-shadow;
+    transition-duration: 500ms;
+    transition-timing-function: ease-in-out;
+    z-index: 1;
+    &:hover{
+    box-shadow: 1px 3px 8px 2px rgba(209, 211, 211, 0.75);
+    }
+    font-size: 16px;
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    color: #4D4D4D;
+
+    .icon{
+        background-color: #008F75;
+        width: max-content;
+        height: max-content;
+        padding: 6px;
+        border-radius: 999px;
+        
+    }
+    .heading{
+        font-size: 1.25em;
+        color: #000000;
+        font-weight: 700;
+    }
 }
