--- a/src/components/Productivity/index.module.css
+++ b/src/components/Productivity/index.module.css
@@ -3,6 +3,7 @@
   width: 100%;
   position: relative;
   color: #000000;
+  padding-block: 20px;
   justify-content: space-around;
   align-items: center;
 }
