--- a/src/components/ReasonCard/index.module.scss
+++ b/src/components/ReasonCard/index.module.scss
@@ -1,4 +1,5 @@
 .container{
+    flex-basis: 30%;
     background-color: #FBFDFD;
     box-shadow: 1px 3px 14px 2px rgba(209, 211, 211, 0.35);
     transition: box-shadow;
