--- a/src/components/Reason/index.module.css
+++ b/src/components/Reason/index.module.css
@@ -28,7 +28,7 @@
 }
 .container .cards {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   justify-items: flex-start;
 }
 @media screen and (max-width: 650px) {
