--- a/src/components/Reason/index.module.scss
+++ b/src/components/Reason/index.module.scss
@@ -11,6 +11,7 @@
             display: flex;
             flex-direction: column;
             gap: 10px;
+            z-index: 1;
         .heading{
             font-weight: 700;
             font-size: 2em;
@@ -29,12 +30,14 @@
         display: flex;
         justify-content: space-between;
         justify-items: flex-start;
+        z-index: 1;
         @media screen and (max-width: 650px) {
             flex-direction: column;
             gap: 50px;
         }
     }
     .cta{
+        z-index: 1;
         .link{
             text-decoration: underline #058d74;
             color: #058d74;
@@ -46,4 +49,21 @@
             }
         }
     }
+                .block1 {
+                    position: absolute;
+                    bottom: 20px;
+                    left: 20%;
+                }
+        
+                .block2 {
+                    position: absolute;
+                    right: 20%;
+                    bottom: 20px;
+                }
+        
+                .block3 {
+                    position: absolute;
+                    left: 47%;
+                    bottom: 50px;
+                }
 }
