--- a/src/components/Productivity/index.module.css
+++ b/src/components/Productivity/index.module.css
@@ -4,6 +4,7 @@
   position: relative;
   color: #000000;
   padding-block: 20px;
+  padding-inline: 5px;
   justify-content: space-around;
   align-items: center;
 }
