--- a/src/components/Productivity/index.module.scss
+++ b/src/components/Productivity/index.module.scss
@@ -3,8 +3,7 @@
     width: 100%;
     position: relative;
     color: #000000;
-    padding-block: 20px;
-    padding-inline: 5px;
+    padding: 20px;
     @media screen and (max-width: 650px){
         flex-direction: column;
     }
