--- a/src/components/Productivity/index.module.css
+++ b/src/components/Productivity/index.module.css
@@ -3,7 +3,7 @@
   width: 100%;
   position: relative;
   color: #000000;
-  padding: 20px;
+  padding: 20px 10px;
   justify-content: space-around;
   align-items: center;
 }
