--- a/src/components/Productivity/index.module.scss
+++ b/src/components/Productivity/index.module.scss
@@ -3,7 +3,7 @@
     width: 100%;
     position: relative;
     color: #000000;
-    padding: 20px;
+    padding: 20px 10px;
     @media screen and (max-width: 650px){
         flex-direction: column;
     }
