--- a/src/components/Content/index.module.css
+++ b/src/components/Content/index.module.css
@@ -1,1 +1,46 @@
+.container {
+  display: flex;
+  padding: 40px 5%;
+  justify-content: space-around;
+  background-color: #FCFAFF;
+}
+@media screen and (max-width: 650px) {
+  .container {
+    flex-direction: column-reverse;
+  }
+}
+.container .content {
+  flex-basis: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.container .content .header {
+  position: relative;
+  font-size: 30px;
+  font-weight: 700;
+  z-index: 1;
+}
+.container .content .header::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 5ch;
+  font-size: 30px;
+  height: 13px;
+  background-color: #C99EFA;
+  bottom: 5px;
+  z-index: -1;
+  left: 1px;
+}
+.container .content .details {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  font-size: 16px;
+}
+.container .illustration {
+  flex-basis: 40%;
+}
+
 /*# sourceMappingURL=index.module.css.map */
