--- a/src/components/Content/index.module.scss
+++ b/src/components/Content/index.module.scss
@@ -1,16 +1,21 @@
 .container{
     display: flex;
-    padding: 40px 5%;
+    padding: 60px 2.5%;
     justify-content: space-around;
     background-color: #FCFAFF;
+    position: relative;
+    color: #4D4D4D;
     @media screen and (max-width: 650px) {
         flex-direction: column-reverse;
+        padding: 40px 2.5%;
     }
     .content{
         flex-basis: 50%;
         display: flex;
         flex-direction: column;
         gap: 20px;
+        z-index: 1;
+        line-height: 37px;
         .header{
             position: relative;
             font-size: 30px;
@@ -38,5 +43,20 @@
     }
     .illustration{
         flex-basis: 40%;
+    }
+    .biceps{
+        position: absolute;
+        bottom: 0;
+        z-index: 0;
+    }
+    .leftDots{
+        position: absolute;
+        left: 0;
+        bottom: 30px;
+    }
+    .rightDots{
+        position: absolute;
+        right: 0;
+        bottom: 30px;
     }
 }
