--- a/src/components/Nav/index.module.css
+++ b/src/components/Nav/index.module.css
@@ -2,39 +2,64 @@
   --horizontal-padding: 50px;
   --vertical-padding: 25px;
   padding: var(--vertical-padding) var(--horizontal-padding);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   overflow: hidden;
 }
+
 .nav svg {
   width: 170px;
   position: relative;
   z-index: 8;
 }
+
 .nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   list-style-type: none;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 40px;
 }
+
 .nav .menuBtnContainer {
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   display: none;
-  flex-direction: column;
-  align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   gap: 5px;
   position: relative;
   z-index: 8;
   cursor: pointer;
 }
+
 .nav .menuBtnContainer .menuBtn {
   width: 24px;
   height: 3px;
   background-color: #545454;
   border-radius: 999px;
+  -webkit-transition: -webkit-transform 0.35s;
+  transition: -webkit-transform 0.35s;
   transition: transform 0.35s;
+  transition: transform 0.35s, -webkit-transform 0.35s;
 }
+
 .nav .menuBtnContainer::before, .nav .menuBtnContainer::after {
   content: "";
   display: inline-block;
@@ -42,26 +67,43 @@
   height: 3px;
   border-radius: 999px;
   background-color: #545454;
+  -webkit-transition: -webkit-transform 0.35s;
+  transition: -webkit-transform 0.35s;
   transition: transform 0.35s;
-  transform-origin: left;
+  transition: transform 0.35s, -webkit-transform 0.35s;
+  -webkit-transform-origin: left;
+          transform-origin: left;
 }
+
 .nav .menuBtnContainer.active .menuBtn {
-  transform: translateX(30vw);
+  -webkit-transform: translateX(30vw);
+          transform: translateX(30vw);
 }
+
 .nav .menuBtnContainer.active::before {
-  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
+
 .nav .menuBtnContainer.active::after {
-  transform: translateY(3px) rotate(-45deg);
+  -webkit-transform: translateY(3px) rotate(-45deg);
+          transform: translateY(3px) rotate(-45deg);
 }
 
 @media screen and (max-width: 950px) {
   .nav .menuBtnContainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
   .nav ul {
-    flex-direction: column;
-    align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     gap: 30px;
     position: absolute;
     left: 0;
@@ -71,14 +113,21 @@
     z-index: 5;
     padding: 40px var(--horizontal-padding);
     padding-top: 95px;
-    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
-    transform: translateY(-105%);
+    -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+    -webkit-transform: translateY(-105%);
+            transform: translateY(-105%);
+    -webkit-transition: -webkit-transform 0.35s;
+    transition: -webkit-transform 0.35s;
     transition: transform 0.35s;
+    transition: transform 0.35s, -webkit-transform 0.35s;
   }
   .nav ul.active {
-    transform: translateY(0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
 }
+
 @media screen and (max-width: 650px) {
   .nav {
     --horizontal-padding: 25px;
@@ -90,4 +139,5 @@
   .nav ul {
     padding-top: 80px;
   }
-}/*# sourceMappingURL=index.module.css.map */
+}
+/*# sourceMappingURL=index.module.css.map */
