--- a/src/components/Productivity/index.module.css
+++ b/src/components/Productivity/index.module.css
@@ -1,39 +1,57 @@
 .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
   position: relative;
   color: #000000;
   padding: 20px 10px;
-  justify-content: space-around;
-  align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 @media screen and (max-width: 650px) {
   .container {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
+
 .container .LeftZigZag {
   position: absolute;
   left: 0;
   top: -20%;
   z-index: -1;
 }
+
 .container .illustration {
-  flex-basis: 40%;
+  -ms-flex-preferred-size: 40%;
+      flex-basis: 40%;
 }
+
 .container .content {
-  flex-basis: 40%;
+  -ms-flex-preferred-size: 40%;
+      flex-basis: 40%;
 }
+
 .container .content .header {
   font-weight: 700;
   font-size: 35px;
 }
+
 .container .content .details span {
   font-weight: 600;
 }
+
 .container .RightZigZag {
   position: absolute;
   bottom: 0;
   right: 0;
   z-index: -1;
-}/*# sourceMappingURL=index.module.css.map */
+}
+/*# sourceMappingURL=index.module.css.map */
