--- a/src/components/Productivity/index.module.css
+++ b/src/components/Productivity/index.module.css
@@ -5,15 +5,17 @@
   width: 100%;
   position: relative;
   color: #000000;
-  padding: 20px 10px;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  padding: 60px 50px;
+  gap: 40px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 1070px) {
   .container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -22,26 +24,33 @@
   }
 }
 
+@media screen and (max-width: 650px) {
+  .container {
+    padding: 60px 25px;
+  }
+}
+
 .container .LeftZigZag {
   position: absolute;
   left: 0;
-  top: -20%;
+  top: 0;
   z-index: -1;
 }
 
 .container .illustration {
-  -ms-flex-preferred-size: 40%;
-      flex-basis: 40%;
-}
-
-.container .content {
-  -ms-flex-preferred-size: 40%;
-      flex-basis: 40%;
+  max-width: 100%;
+  height: auto;
 }
 
 .container .content .header {
   font-weight: 700;
-  font-size: 35px;
+  font-size: 2em;
+  margin-bottom: 8px;
+}
+
+.container .content .details {
+  line-height: 28px;
+  max-width: 600px;
 }
 
 .container .content .details span {
