--- a/src/components/Reason/index.module.css
+++ b/src/components/Reason/index.module.css
@@ -81,18 +81,15 @@
 }
 
 .container .cta .link {
-  -webkit-text-decoration: underline #058d74;
-          text-decoration: underline #058d74;
+  text-decoration: underline;
   color: #058d74;
   cursor: pointer;
-  -webkit-transition: color 350ms ease-in-out;
-  transition: color 350ms ease-in-out;
+  -webkit-transition: color 300ms ease-in-out;
+  transition: color 300ms ease-in-out;
 }
 
 .container .cta .link:hover {
   color: #09cda9;
-  -webkit-text-decoration-color: #09cda9;
-          text-decoration-color: #09cda9;
 }
 
 .container .block1 {
