--- a/src/components/Community/index.module.css
+++ b/src/components/Community/index.module.css
@@ -1,1 +1,50 @@
-/* No CSS *//*# sourceMappingURL=index.module.css.map */
+.container {
+  display: flex;
+  align-items: center;
+  background-color: #FCFAFF;
+  position: relative;
+}
+.container .content {
+  flex-basis: 60%;
+  padding-left: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.container .content .header {
+  font-size: 35px;
+  font-weight: 700;
+}
+.container .content .header span {
+  color: #008F75;
+}
+.container .content .details {
+  line-height: 30px;
+}
+.container .content .communityLink {
+  background-image: linear-gradient(138.94deg, #9D50F6 33.05%, #00D1AB 80.37%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-decoration: underline;
+  position: relative;
+}
+.container .content .communityLink::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 50px;
+  font-size: 30px;
+  height: 5px;
+  background-color: #C99EFA;
+  bottom: 5px;
+  left: 1px;
+}
+.container .illustration {
+  flex-basis: 40%;
+  padding-left: 7.5%;
+  padding-top: 7.5%;
+  border-top-left-radius: 50px;
+  background: linear-gradient(100.55deg, #7450F6 13.34%, #CF50F6 97.24%);
+  position: relative;
+}/*# sourceMappingURL=index.module.css.map */
