--- a/src/components/Productivity/index.module.css
+++ b/src/components/Productivity/index.module.css
@@ -1,46 +1,45 @@
 .container {
   display: flex;
+  width: 100%;
   position: relative;
+  color: #000000;
   padding: 60px 2.5%;
   justify-content: space-around;
   align-items: center;
-  background-color: #FCFAFF;
 }
 @media screen and (max-width: 650px) {
   .container {
-    flex-direction: column-reverse;
+    flex-direction: column;
+    padding: 40px 2.5%;
   }
 }
-.container .content {
-  flex-basis: 50%;
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-}
-.container .content .header {
-  font-size: 40px;
-  font-weight: 700;
-}
-.container .content .header span {
-  color: #9D50F6;
-}
-.container .content .details {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  line-height: 30px;
-  color: #4D4D4D;
-}
-.container .content .details b {
-  color: #000000;
+.container .LeftZigZag {
+  position: absolute;
+  left: 0;
+  top: 10px;
+  z-index: -1;
 }
 .container .illustration {
   flex-basis: 40%;
-  z-index: 1;
 }
-.container .rightBlurBlob {
+.container .content {
+  flex-basis: 40%;
+}
+.container .content .header {
+  font-weight: 700;
+  font-size: 35px;
+}
+.container .content .details {
+  color: #4D4D4D;
+  line-height: 30px;
+}
+.container .content .details span {
+  font-weight: 600;
+  color: #000000;
+}
+.container .RightZigZag {
   position: absolute;
   bottom: 0;
   right: 0;
-  z-index: 0;
+  z-index: -1;
 }/*# sourceMappingURL=index.module.css.map */
