--- a/src/components/Community/index.module.scss
+++ b/src/components/Community/index.module.scss
@@ -9,6 +9,7 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
+        
         .header{
             font-size: 35px;
             font-weight: 700;
@@ -19,6 +20,19 @@
         .details{
             line-height: 30px;
         }
+                .linkContainer {
+                    display: flex;
+                    align-items: center;
+                    gap: 20px;
+                    width: fit-content;
+                    .linkIcon{
+                        transition: margin-left 500ms ease-in-out;
+                    }
+                    &:hover{
+                        .linkIcon{
+                            margin-left: 12px;
+                        }
+                    }
         .communityLink{
             background-image: linear-gradient(138.94deg, #9D50F6 33.05%, #00D1AB 80.37%);
                 -webkit-background-clip: text;
@@ -36,9 +50,9 @@
         background-image: linear-gradient(138.94deg, #9D50F6 33.05%, #00D1AB 80.37%);
         bottom: -2px;
         left: 1px;
+        }    
         }
-                
-        }
+    }
     }
     .illustration{
         flex-basis: 40%;
