--- a/src/components/Community/index.module.css
+++ b/src/components/Community/index.module.css
@@ -4,6 +4,12 @@
   background-color: #FCFAFF;
   position: relative;
 }
+.container .waterMark {
+  position: absolute;
+  top: 75px;
+  left: 0;
+  z-index: 0;
+}
 .container .content {
   flex-basis: 60%;
   padding-left: 30px;
@@ -14,6 +20,7 @@
 .container .content .header {
   font-size: 35px;
   font-weight: 700;
+  z-index: 1;
 }
 .container .content .header span {
   color: #008F75;
